--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
             "org.aspectj:aspectjweaver:1.9.22.1",
             'com.codeborne:selenide:7.4.1',
             'io.qameta.allure:allure-selenide:2.28.1',
-            'io.qameta.allure:allure-junit5:2.28.1',
+            'io.qameta.allure:allure-junit5:2.28.1'
     )
 }
 
@@ -56,7 +56,7 @@ tasks.withType(Test) {
     }
 }
 
-task smoke_test(type: Test) {
+task smoke_tests(type: Test) {
     useJUnitPlatform {
         includeTags("smoke")
     }
